<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.Q6_FormFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="30dp"
        android:layout_marginTop="48dp">

        <RadioButton
            android:id="@+id/radioButton_q6_a"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_alternative_a" />
        <RadioButton
            android:id="@+id/radioButton_q6_b"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_alternative_b" />
        <RadioButton
            android:id="@+id/radioButton_q6_c"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_alternative_c" />
        <RadioButton
            android:id="@+id/radioButton_q6_d"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6_alternative_d" />

    </RadioGroup>

    <Button
        android:id="@+id/avancar_btn_q6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avancar_btn_q6_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup6"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>