<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.Q7_FormFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioButton_q7_a"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7_alternative_a" />

        <RadioButton
            android:id="@+id/radioButton_q7_b"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7_alternative_b" />

        <RadioButton
            android:id="@+id/radioButton_q7_c"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7_alternative_c" />

        <RadioButton
            android:id="@+id/radioButton_q7_d"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7_alternative_d" />

    </RadioGroup>

    <Button
        android:id="@+id/avancar_btn_q7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/avancar_btn_q7_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup7"
        tools:layout_editor_absoluteX="42dp" />

</androidx.constraintlayout.widget.ConstraintLayout>