<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.Q2_FormFragment">

   <TextView
       android:id="@+id/textView3"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/q2"
       android:textAlignment="gravity"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <RadioGroup
       android:id="@+id/radioGroup2"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="48dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.372"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView3"
       tools:ignore="MissingConstraints">

      <RadioButton
          android:id="@+id/radioButton_q2_a"
          android:onClick="onRadioButtonClicked"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/q2_alternative_a" />

      <RadioButton
          android:id="@+id/radioButton_q2_b"
          android:onClick="onRadioButtonClicked"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/q2_alternative_b" />

      <RadioButton
          android:id="@+id/radioButton_q2_c"
          android:onClick="onRadioButtonClicked"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/q2_alternative_c" />

      <RadioButton
          android:id="@+id/radioButton_q2_d"
          android:onClick="onRadioButtonClicked"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/q2_alternative_d" />
   </RadioGroup>

   <Button
       android:id="@+id/avancar_btn_q2"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="16dp"
       android:text="@string/avancar_btn_q2_text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/radioGroup"
       app:layout_constraintVertical_bias="0.503" />

</androidx.constraintlayout.widget.ConstraintLayout>