<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.Q5_FormFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="67dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="48dp">

        <RadioButton
            android:id="@+id/radioButton_q5_a"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_alternative_a"/>
        <RadioButton
            android:id="@+id/radioButton_q5_b"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_alternative_b"/>
        <RadioButton
            android:id="@+id/radioButton_q5_c"
            android:onClick="onRadioButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5_alternative_c"/>

    </RadioGroup>

    <Button
        android:id="@+id/avancar_btn_q5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/avancar_btn_q5_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
        app:layout_constraintVertical_bias="0.498" />


</androidx.constraintlayout.widget.ConstraintLayout>