<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.Q1_Fragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/q1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    Q a -->
    <CheckBox
        android:id="@+id/cb_q1_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp" />
    <TextView
        android:id="@+id/question_a_cb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/q1_alternative_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/cb_q1_a"
        app:layout_constraintStart_toEndOf="@+id/cb_q1_a"
        app:layout_constraintTop_toTopOf="@+id/cb_q1_a"
        app:layout_constraintVertical_bias="0.517" />

<!--    Q b-->
    <CheckBox
        android:id="@+id/cb_q1_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_q1_a"
        tools:layout_editor_absoluteX="54dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/question_b_cb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/q1_alternative_b"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/cb_q1_b"
        app:layout_constraintStart_toEndOf="@+id/cb_q1_b"
        app:layout_constraintTop_toTopOf="@+id/cb_q1_b"
        app:layout_constraintVertical_bias="0.379" />

<!--    Q c-->
    <CheckBox
        android:id="@+id/cb_q1_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_q1_b"
        tools:layout_editor_absoluteX="54dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/question_c_cb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/q1_alternative_c"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintBottom_toBottomOf="@+id/cb_q1_c"
        app:layout_constraintStart_toEndOf="@+id/cb_q1_c"
        app:layout_constraintTop_toTopOf="@+id/cb_q1_c"
        app:layout_constraintVertical_bias="0.206" />

<!--    Q d-->
    <CheckBox
        android:id="@+id/cb_q1_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_q1_c"
        tools:layout_editor_absoluteX="54dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/question_d_cb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/q1_alternative_d"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/cb_q1_d"
        app:layout_constraintStart_toEndOf="@+id/cb_q1_d"
        app:layout_constraintTop_toTopOf="@+id/cb_q1_d"
        app:layout_constraintVertical_bias="0.068" />


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/avancar_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_q1_d"
        app:layout_constraintVertical_bias="0.896" />


</androidx.constraintlayout.widget.ConstraintLayout>